--- a/about.qmd
+++ b/about.qmd
@@ -6,28 +6,32 @@ nocite: '@*'
 
 ## Data used to be scarce and expensive
 
-My data journey started back in the mids 2000s, working as a *Reliability Engineer* of Power Systems for the operator of the world's fourth biggest hydroelectric power plant [Guri](https://www.power-technology.com/features/feature-the-10-biggest-hydroelectric-power-plants-in-the-world/){target="_blank"}. The objective was ambitious:
+My data journey started back in the mid 2000s, working as a *Reliability Engineer* of Power Systems for the operator of the world's fourth biggest hydroelectric power plant [Guri](https://www.power-technology.com/features/feature-the-10-biggest-hydroelectric-power-plants-in-the-world/){target="_blank"}. The objective was ambitious:
 
-- *Dynamic monitoring of the risk of blackouts with probabilistic KPIs.*
+-   *Dynamic monitoring of the risk of blackouts with probabilistic KPIs.*
 
-At that time the position Data Scientist didn't exist, but some books in the realm of *Data Mining* and *Emerging Computing Methods* trying to organise and formalise the field. However, the area of *Survival Analysis*, specifically *Reliability and Risk* were pretty matured, given their importance for the industry.
+At that time the position Data Scientist didn't exist, but some books in the realm of *Data Mining* and *Emerging Computing Methods* trying to organise and formalise the field. However, the area of *Survival Analysis*, specifically *Reliability and Risk* were pretty matured due to their importance for the industry.
 
-Going forward with a stochastic thinking in an organisation with a lack of statistical culture and less amounts of data wasn't easy, relying only on a mixture of internal ERP's data, world surveys and standards. A continuous push towards a ***data culture*** from the management above was key, and it still is!
+Going forward with a stochastic thinking in an organisation with a lack of statistical culture and less amounts of data wasn't easy, relying only on a mixture of internal ERP data, world surveys and standards. A continuous push towards a ***data culture*** from top-level management was key, and it still is!
 
 ## Education
 
 #### IBM
+
 [IBM AI Engineering Professional Certificate, 2022-2023](https://www.coursera.org/account/accomplishments/specialization/certificate/6FLUFKVGSAST){target="_blank"} (Joseph Santarcangelo et al.)
 
 #### Udacity
+
 [AI for Buisness Leaders, Nanodegree, 2022](https://graduation.udacity.com/confirm/CAD3ZG3C){target="_blank"} (William Ross & Luis Serrano)
 
 Introduction to Machine Learning Free Course, 2017 (Sebastian Thrun & Katie Malone)
 
 #### Stanford University
+
 [STATSX0001 Online: Statistical Learning, 2022](https://courses.edx.org/certificates/82d8c63898494b70b9da2edb345746a1){target="_blank"} (Trevor Hastie & Robert Tibshirani)
 
 #### Udemy
+
 100 Days of Code: The Complete Python Pro Bootcamp for 2023[^1] (Angela Yu)
 
 [^1]: Ongoing
@@ -41,17 +45,21 @@ Introduction to Machine Learning Free Course, 2017 (Sebastian Thrun & Katie Malo
 [Feature Engineering, 2023](https://www.kaggle.com/learn/certification/jorgethomasm/feature-engineering){target="_blank"} (Ryan Holbrook & Alexis Cook)
 
 #### University of Nottingham
+
 MSc. Electrical Technology for Sustainable and Renewable Energy Systems, UK (2010-2011)
 
 #### Universidad del Zulia
+
 Dipl.-Ing. Electrical Engineering, VE (2000-2006)
 
 ## Languages
-- Spanish (Native Language)
-- English (Fluent)
-- German (Fluent)
+
+-   Spanish (Native Language)
+-   English (Fluent)
+-   German (Fluent)
 
 ## Publications
-To date I've authored and co-authored several publications[^2] realated to *data analysis* in different domains like *Power & Energy*, *IoT* and *utilities*.
+
+To date I've authored and co-authored several publications[^2] related to *data analysis* in different domains like *Power & Energy Systems*, *IoT* and *utilities*.
 
 [^2]: Check my [ORCiD](https://orcid.org/0000-0001-8844-8421){target="_blank"}
